Revision history for Test-BrewBuild

2.11 UNREL
        - added BB::_clean_available(). This is a filter method to remove perls
          that were scooped up with info(), but we don't want (such as cperl)
          (fixes #162)
        -

2.10    2016-11-19
        - fix shebang line in the scripts to reference `/usr/bin/env perl`
          instead of `/usr/bin/perl` (Thanks 'nigelhorne' (github) for the
          report) (closes #157)
        - change perms on the bin/ files to 755 from 644 (thanks again to
          'nigelhorne' from github for reporting) (closes #156)
        - moved BrewBuild object creation in brewbuild down below the checks to
          see if *brew is installed. No need for the object if they aren't
          (closes #160)
        - brewbuild was deleting $args{args} instead of $opts{args} when a
          plugin is in use without --revdep (fixes #159)
        - in BB::_exec(), we were returning before unloading the dzil shim. This
          technically shouldn't have caused any issues, but in some cases it may
          have (closes #158)

2.09    2016-11-06
        - added "logfile" flag for bbtester. If not in --fg mode with --stdout
          set and --logfile is set, we'll write to a file in
          "workdir/bbtester.log". This is to help in situations where the
          tester is hanging in 'start' mode, but not in --fg mode. Without this
          flag, no logging info is displayed or returned (closes #149)
        - fixed issue where setup info was not being displayed with -s
          (closes #154)
        - fixed issue where sending -1 to --new was causing brewbuild help to
          be displayed (closes #151)
        - required Perl version now 5.10 from 5.8, due to that limit in 
          MetaCPAN::Client
        - removed Perl 5.8 tests from Travis
        - added help entry for the -S|--save option
        - fixed t/test_api/95, as Mock::Sub now has more revdeps (closes #155)